update the code to add lwip_comm

--- a/MDK-ARM/STM32F407_LAN8742A_LwIP_FreeRTOS.uvprojx
+++ b/MDK-ARM/STM32F407_LAN8742A_LwIP_FreeRTOS.uvprojx
@@ -1128,6 +1128,11 @@
               <FileType>1</FileType>
               <FilePath>..\Netapp\udp_server.c</FilePath>
             </File>
+            <File>
+              <FileName>lwip_comm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Netapp\lwip_comm.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
